k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xcloud
  labels:
    name: xcloud
    environment: production
